[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "plato-tile-spec"
version = "0.2.0"
description = "Canonical tile format — TileSpec, TileDomain (14 types), validation schema"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
